--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
                             <div class="clay-card text-center p-4 p-md-5" style="max-width: 700px;">
-                                <img src="https://placehold.co/100x100/38bdf8/ffffff?text=B" 
+                                <img src="img/person1.webp" 
                                      alt="Foto Profil Budi Santoso" 
                                      class="rounded-circle shadow-sm mb-3 border border-4 border-white" 
                                      style="width: 80px; height: 80px; object-fit: cover; margin-top: -60px;">
@@ -404,7 +404,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <div class="clay-card text-center p-4 p-md-5" style="max-width: 700px;">
-                                <img src="https://placehold.co/100x100/ec4899/ffffff?text=S" 
+                                <img src="img/person2.webp" 
                                      alt="Foto Profil Siti Aminah" 
                                      class="rounded-circle shadow-sm mb-3 border border-4 border-white" 
                                      style="width: 80px; height: 80px; object-fit: cover; margin-top: -60px;">
@@ -422,7 +422,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <div class="clay-card text-center p-4 p-md-5" style="max-width: 700px;">
-                                <img src="https://placehold.co/100x100/8b5cf6/ffffff?text=R" 
+                                <img src="img/person3.webp" 
                                      alt="Foto Profil Rian Pratama" 
                                      class="rounded-circle shadow-sm mb-3 border border-4 border-white" 
                                      style="width: 80px; height: 80px; object-fit: cover; margin-top: -60px;">
