--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <meta name="keywords" content="rafting malang, arung jeram malang, paket rafting murah, wisata batu malang, outbound malang, rafting kasembon, rafting batu">
     <meta name="author" content="Malang Rafting Adventure">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.malangrafting.com/">
+    <link rel="canonical" href="https://rafting-malang.vercel.app">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.malangrafting.com/">
+    <meta property="og:url" content="https://rafting-malang.vercel.app">
     <meta property="og:title" content="Malang Rafting Adventure - Serunya Taklukkan Sungai!">
     <meta property="og:description" content="Paket wisata arung jeram dan outbound #1 di Malang. Aman untuk pemula dan keluarga.">
-    <meta property="og:image" content="https://www.malangrafting.com/img/og-image.jpg">
+    <meta property="og:image" content="https://rafting-malang.vercel.app/img/index.webp">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Malang Rafting Adventure">
     <meta property="twitter:description" content="Wisata adrenalin terbaik di Malang. Cek promo paket terbaru kami.">
-    <meta property="twitter:image" content="https://www.malangrafting.com/img/og-image.jpg">
+    <meta property="twitter:image" content="https://rafting-malang.vercel.app/img/index.webp">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -39,7 +39,7 @@
       "@context": "https://schema.org",
       "@type": "SportsActivityLocation",
       "name": "Malang Rafting Adventure",
-      "image": "https://www.malangrafting.com/img/index.webp",
+      "image": "https://rafting-malang.vercel.app/img/index.webp",
       "description": "Penyedia layanan wisata arung jeram (rafting) dan outbound training profesional di Malang.",
       "address": {
         "@type": "PostalAddress",
@@ -54,7 +54,7 @@
         "latitude": "-7.9234",
         "longitude": "112.6071"
       },
-      "url": "https://www.malangrafting.com",
+      "url": "https://rafting-malang.vercel.app",
       "telephone": "+6282211221909",
       "priceRange": "Rp 150.000 - Rp 250.000",
       "aggregateRating": {
